app2-gw-api/demo-gw-http-route-1.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-http-app-v1
  namespace: lseg
spec:
  parentRefs:
    - name: gw-multiple-listeners
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v1
          port: 80
  hostnames:
    - gw-v1.app.avi.com
