app2-gw-api/demo-gw-http-route-multiple-1-2.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-app-v1-v2
  namespace: lseg
spec:
  parentRefs:
    - name: gw-multiple-listeners
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v1
          port: 80
          weight: 90
        - name: svc-v2
          port: 80
          weight: 10
  hostnames:
    - gw-migration.app.avi.com
